--- a/Fares's Portfolio/style.css
+++ b/Fares's Portfolio/style.css
@@ -175,13 +175,12 @@ body {
   
 /* Project Section */
 .project-section {
-    height: 100vh;
     background: #333;
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
+    transition: all .5s;
 }
 
 .project-section h4 {
@@ -226,7 +225,6 @@ body {
 .project-container {
     margin-top: 20px;
     width: 80%;
-    max-height: 450px;
     display: grid;
     grid-template-columns: 400px 400px 400px;
     justify-content: center;
